# nbody-sim

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: body.h  main.cpp
